# WarOfLife

./: CMakeLists.txt  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json
src/: Brush.h  GameMain.cpp  GameMain.h  GosperGliderGun.h  Node.cpp  Node.h  PlayerColor.h  main.cpp
src/brush/: Brush.cpp  Dot.cpp  Dot.h  Glider.cpp  Glider.h  GosperGliderGun.cpp
